# AudioForge

./: CHANGELOG.md  Cargo.toml  flake.nix
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  check.yml  release.yml
src/: main.rs  state.rs
src/components/: awc_generator.rs  inputs.rs  mod.rs  occl_generator.rs  project_selector.rs
src/dat_files/: dat54.rs  mod.rs
src/project_mgmt/: awc.rs  dat54.rs  mod.rs  project.rs
src/utils/: mod.rs  transcoder.rs  xml.rs
