[package]
name = "audio_forge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Disable x11 features until next release where a fix for hyprland has been added
eframe = { version = "0.24.0", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland"]}
# pin package because we don't use the default-features of eframe
winit = { version = "0.28.1", default-features = false }
egui = "0.24.0"
egui_extras = "0.24.0"
egui_graphs = "0.16.0"
env_logger = "0.10.1"
petgraph = "0.6.4"
strum = { version = "0.25.0", features = ['derive'] }
